# ScooterShopProject

./: README.md
L6_TeamEMA/: CMakeLists.txt  main.cpp  storage.txt  tests.cpp  tests.h
L6_TeamEMA/controller/: ScooterController.cpp  ScooterController.h
L6_TeamEMA/domain/: Electroscooter.cpp  Electroscooter.h
L6_TeamEMA/repository/: CRUDRepository.h  ScooterRepo.cpp  ScooterRepo.h  test_storage.txt
L6_TeamEMA/ui/: ScooterUI.cpp  ScooterUi.h
